# nautilus-terminal

./: .cvsignore  MAINTAINERS  Makefile  Makefile.am  Makefile.in  NEWS  OChangeLog-2006-12-28  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.in  libtool  ltmain.sh  nautilus-terminal.doap  nautilus-terminal.schemas.in
po/: ChangeLog  LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  ar.gmo  ar.po  as.gmo  as.po  be.gmo  be.po  be@latin.gmo  be@latin.po  bg.gmo  bg.po  bn_IN.gmo  bn_IN.po  bs.gmo  bs.po  ca.gmo  ca.po  ca@valencia.gmo  ca@valencia.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  dz.gmo  dz.po  el.gmo  el.po  en_CA.gmo  en_CA.po  en_GB.gmo  en_GB.po  es.gmo  es.po  (+98 more)
src/: Makefile  Makefile.am  Makefile.in  nautilus-terminal.c  nautilus-terminal.h  terminal.c
